resources/community-0.9/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: morphic-community-v09
  labels:
    app: morphic-community-v09
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: morphic-community-v09
  template:
    metadata:
      labels:
        app: morphic-community-v09
      annotations:
        # @TODO add metrics
        prometheus.io/scrape: "false"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "80"
    spec:
      containers:
      - name: morphic-community-v09
        image: morphicworld/morphic-community-web:stable
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 30
          timeoutSeconds: 2
          failureThreshold: 4
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 2
          failureThreshold: 4
          successThreshold: 2
        ports:
        - name: http
          containerPort: 80
        env: []
        resources:
          requests:
            cpu: "0.5"
            memory: "150Mi"
          limits:
            #cpu: "1"
            memory: "150Mi"
