resources/community-0.9/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: morphic-community-v09
spec:
  type: ClusterIP
  selector:
    app: morphic-community-v09
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
