resources/community-0.9/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: morphic-community-v09
  annotations:
    kubernetes.io/ingress.class: external
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # I have no idea what to set this to!
    nginx.ingress.kubernetes.io/limit-rps: "400"
spec:
  tls:
  - hosts:
    - dev-communitymanager.morphiclite-oregondesignservices.org
    secretName: morphic-community-v09-tls
  rules:
  - host: dev-communitymanager.morphiclite-oregondesignservices.org
    http:
      paths:
      - backend:
          serviceName: morphic-community-v09
          servicePort: http
        path: /
